Fixed broken instant sale end-and-claim button.

--- a/js/packages/common/src/components/MetaplexOverlay/styles.less
+++ b/js/packages/common/src/components/MetaplexOverlay/styles.less
@@ -1,4 +1,5 @@
 .metaplex-overlay-modal {
+  background: rgba(black, 0.3);
   backdrop-filter: blur(10px);
 }
 
